# goto-project-rs

./: .editorconfig  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
completions/zsh/: _gt
src/: cli.rs  config.rs  lib.rs  main.rs  manager.rs  project.rs  projects.rs
src/v2/: config.rs  manager.rs  mod.rs  project.rs
