[package]
name = "goto_project"
version = "0.1.1"
authors = ["Nikita Sivakov <sivakov512@gmail.com>"]

description = "Easy and fast project switching in your shell!"
repository = "https://github.com/sivakov512/goto-project-rs"
readme = "README.md"
keywords = ["rust", "cli", "project-management", "utilities"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

autobins = false

[badges]
travis-ci = { repository = "sivakov512/goto-project-rs", branch = "master" }

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
clap = "2.32"
dirs = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
subprocess = "0.1"