[package]
name = "goto_project"
version = "0.2.0"
authors = ["Nikita Sivakov <sivakov512@gmail.com>"]
edition = "2018"

description = "Easy and fast project switching in your shell!"
repository = "https://github.com/sivakov512/goto-project-rs"
readme = "README.md"
keywords = ["rust", "cli", "project-management", "utilities"]
categories = ["command-line-utilities"]
license = "MIT"

autobins = false

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
clap = "2.33"
dirs = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
subprocess = "0.2"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
